Make sure body covers entire page

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
     font-family: 'Arial', sans-serif;
     display: flex;
     justify-content: center;
-    height: 100vh;
+    min-height: 100vh;
     align-items: center;
 }
 .container {
